--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:icon="@drawable/home"
         android:title="Home" />
 
     <item
         android:id="@+id/navigation_sessions"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@drawable/sessions"
         android:title="Sessions" />
 
     <item
         android:id="@+id/navigation_exercises"
-        android:icon="@android:drawable/ic_menu_directions"
+        android:icon="@drawable/exercise"
         android:title="Exercises" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:icon="@drawable/profile"
         android:title="Profile" />
 
 </menu>
